@@ -36,6 +36,9 @@ the file, if the first valid line is not [Desktop Entry].
 @item New Features
 @itemize @minus
 
+@item Added a way to response to XRandR changed events (eg resolution changes)
+via @code{randr-changed-notify-hook} [Daniel M. German]
+
 @item Tabbed windowing system improvements [Fuchur]
 @itemize +
 @item Support for transient tab-frames
