@@ -31,6 +31,7 @@
 #include <X11/Xresource.h>
 #include <X11/Xatom.h>
 #include <glib.h>
+#include <stdio.h>
 
 /* Lookup table of event handlers */
 void (*event_handlers[LASTEvent])(XEvent *ev);
@@ -69,6 +70,13 @@ static XID event_handler_context;
 
 static Atom xa_sawfish_timestamp;
 
+/* is there xrand support? */
+static int has_randr = FALSE;
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+static int randr_event_base; /* Will give us the offset for the xrandr events */
+#endif
+
+
 DEFSYM(visibility_notify_hook, "visibility-notify-hook");
 DEFSYM(destroy_notify_hook, "destroy-notify-hook");
 DEFSYM(map_notify_hook, "map-notify-hook");
@@ -89,6 +97,11 @@ DEFSYM(enter_frame_part_hook, "enter-frame-part-hook");
 DEFSYM(leave_frame_part_hook, "leave-frame-part-hook");
 DEFSYM(configure_request_hook, "configure-request-hook");
 DEFSYM(configure_notify_hook, "configure-notify-hook");
+
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+DEFSYM(randr_change_notify_hook, "randr-change-notify-hook");
+#endif
+
 DEFSYM(window_state_change_hook, "window-state-change-hook");
 
 DEFSYM(pointer_motion_threshold, "pointer-motion-threshold");
@@ -1265,6 +1278,20 @@ shape_notify (XEvent *ev)
     }
 }
 
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+static void
+randr_screen_change_notify (XEvent *ev)
+{
+    // Only do it if we are sure we are handling the event
+    if (has_randr) {
+        fprintf(stderr, "Yes, we are handling the screen change event\n");
+        // We should add the call to the hook
+        XRRUpdateConfiguration( ev );
+        // Call the hook
+        Fcall_hook(Qrandr_change_notify_hook, Qnil, Qnil);
+    }
+}
+#endif
 
 static int synthetic_configure_mutex;
 
@@ -1407,7 +1434,11 @@ inner_handle_input (repv arg)
 	event_handlers[ev->type] (ev);
     else if (ev->type == shape_event_base + ShapeNotify)
 	shape_notify (ev);
-    else
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+    else if (ev->type == randr_event_base + RRScreenChangeNotify)
+        randr_screen_change_notify(ev);
+#endif
+    else 
 	fprintf (stderr, "warning: unhandled event: %d\n", ev->type);
     return Qnil;
 }
@@ -1676,7 +1707,27 @@ void
 events_init (void)
 {
     repv tem;
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+    int dummy;
+#endif
 
+    has_randr = FALSE;
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+    // This code is executed even in batch mode, in 
+    // which case dpy is not set
+    if (dpy != NULL) {
+        has_randr = XRRQueryExtension( dpy, &randr_event_base, &dummy );
+        if( has_randr )
+        {
+           int major, minor;
+           XRRQueryVersion( dpy, &major, &minor );
+           has_randr = ( major > 1 || ( major == 1 && minor >= 1 ) );
+           fprintf(stderr, "it Has randr %d\n", has_randr);
+           XRRSelectInput( dpy, root_window, RRScreenChangeNotifyMask );
+        }
+    }
+
+#endif
     event_handlers[VisibilityNotify] = visibility_notify;
     event_handlers[ColormapNotify] = colormap_notify;
     event_handlers[KeyPress] = key_press;
@@ -1702,6 +1753,16 @@ events_init (void)
     event_handlers[CreateNotify] = create_notify;
     event_handlers[CirculateNotify] = circulate_notify;
     event_handlers[MappingNotify] = mapping_notify;
+
+#ifdef HAVE_X11_EXTENSIONS_XRANDR_H
+    if (has_randr) 
+    {
+        fprintf(stderr, "Setting handler at event %d\n", randr_event_base + RRScreenChangeNotify);
+        // we can't handle the event in the usual manner because the sizes of the
+        // arrays event_handler and event_names are defined at compile time.
+        rep_INTERN_SPECIAL(randr_change_notify_hook);
+    }
+#endif
 
     event_names[KeyPress] = "KeyPress";
     event_names[KeyRelease] = "KeyRelease";
